# Multi-Agent-Orchestration-using-LangGraph-on-AWS

./: .env.example  .gitignore  README.md  deploy.sh
agents/order-management-agent/: Dockerfile  README.md  pyproject.toml
agents/order-management-agent/scripts/: build.sh  run.sh
agents/order-management-agent/src/: __init__.py  agent.py  config.py  db_init.py  main.py  postgresql_schema.py  postgresql_tools.py  prompts.py  structured_models.py  tools.py
agents/order-management-agent/src/shared/: config.py  models.py
agents/personalization-agent/: Dockerfile  pyproject.toml
agents/personalization-agent/scripts/: build.sh  run.sh
agents/personalization-agent/src/: agent.py  config.py  database.py  dynamodb_session_saver.py  knowledge_base.py  main.py  models.py  prompts.py  tools.py
agents/product-recommendation-agent/: Dockerfile  pyproject.toml
agents/product-recommendation-agent/scripts/: build.sh  run.sh
agents/product-recommendation-agent/src/: agent.py  config.py  database.py  main.py  models.py  prompts.py  tools.py
agents/supervisor-agent/: Dockerfile  LICENSE  README.md  pyproject.toml
agents/supervisor-agent/scripts/: build.sh  run.sh
agents/supervisor-agent/src/: __init__.py  agent.py  client.py  config.py  dynamodb_session_saver.py  main.py  structured_models.py  websocket_event_client.py
agents/supervisor-agent/src/shared/: __init__.py  config.py  utils.py
agents/troubleshooting-agent/: Dockerfile  pyproject.toml
agents/troubleshooting-agent/scripts/: build.sh  run.sh
agents/troubleshooting-agent/src/: agent.py  config.py  knowledge_base.py  main.py  models.py  prompts.py  tools.py
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: setup-config.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/Chat/: AgentAvatar.tsx  AgentBadge.tsx  AgentMessage.tsx  ChatInterface.tsx  MultiAgentChatInterface.tsx  TestGraphQL.tsx  WebSocketChatInterface.tsx  index.ts
frontend/src/components/auth/: AuthenticatorWrapper.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: button.tsx  index.ts  input.tsx
frontend/src/config/: amplify.ts
frontend/src/graphql/: operations.ts
frontend/src/hooks/: useAIAmplifyChat.ts  useAIChat.ts  useAmplifyGraphQL.ts  useAuth.ts  useGraphQL.ts  useMessagePersistence.ts  useSessionManagement.ts  useSupervisorAgentEvents.ts
frontend/src/types/: constants.ts  enums.ts  graphql.ts  index.ts  ui.ts
infra/: .gitignore  README.md  cdk.json  package-lock.json  package.json
infra/lib/: bedrock-knowledge-base-stack.ts  database-stack.ts  ecs-stack.ts  frontend-stack.ts  load-balancer-stack.ts  monitoring-stack.ts  network-stack.ts  streaming-api-stack.ts
infra/lib/frontend-build-trigger/: index.ts
infra/lib/streaming-api/: schema.graphql
infra/lib/streaming-api/lambda-layer/: package.json
infra/lib/streaming-api/resolver-function/: index.ts  package-lock.json  package.json  tsconfig.json
scripts/: cleanup-guardduty-vpc-endpoints.sh  destroy-stacks.sh
tests/: __init__.py
